2004-12-31  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/klatency/latency.c (main): make the output line
	buffered.

2004-12-30  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/syscall.h (__xn_rdtsc): Fix case with
	strict aliasing rules.

	* include/nucleus/asm-ppc/system.h (xnarch_send_timer_ipi):
	Provide for an empty definition in UP mode.

	* arch/ppc/hal/hal.c (rthal_release_irq): Fix call to
	adeos_virtualize_irq_from().

2004-12-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-*/hal.h : got rid of rthal_cpu_relax.

2004-12-28  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c (__rthal_init): Fix error return values.

	* nucleus/lib/GNUmakefile.am, skins/rtai/lib/GNUmakefile.am: Add
	shared lib support.

	* include/nucleus/asm-uvm: Fix and validate the UVM support.

	* include/nucleus/types.h: XNPOD_APERIODIC_TICK ->
	XN_APERIODIC_TICK, XNPOD_NO_TICK -> XN_NO_TICK.

	* nucleus/shadow.c (linux_schedule_head): Fix a subtle
	rescheduling hole after downgrading the root thread priority.

2004-12-29  Philippe Gerum  <rpm@localhost>

	* nucleus/fusion.c: Add missing checks for XNBREAK and return
	-EINTR appropriately.

	* nucleus/shadow.c (xnshadow_wait_barrier): Use spinlock.

	* arch/i386/hal/hal.c (__rthal_init): Add sanity check for
	hw-disabled APIC.

2004-12-28  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/syscall.h: Gather all arch-independent
	definitions for syscall support in a single place.

	* nucleus/module.c (__get_thread_timeout): Attempt to return
	non-zero resource timeouts, even if XNPEND is not set.

	* nucleus/fusion.c (__pthread_activate_vm): Fix startup protocol.

2004-12-27  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/timer.c, include/nucleus/timer.h (xntimer_set_sched):
	Only define xntimer_set_sched for SMP.

2004-12-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h (xnarch_read_environ): Fix
	crash.
	