@@ -241,15 +241,6 @@ typedef struct xnarch_heapcb {
 
 } xnarch_heapcb_t;
 
-static inline void xnarch_init_heapcb (xnarch_heapcb_t *hcb)
-
-{
-    atomic_set(&hcb->numaps,0);
-    hcb->kmflags = 0;
-    hcb->heapbase = NULL;
-    hcb->shmbase = NULL;
-}
-
 #ifdef __cplusplus
 extern "C" {
 #endif
@@ -861,6 +852,30 @@ static inline void xnarch_read_timings (unsigned long long *shot,
 }
 
 #endif /* XENO_TIMER_MODULE */
+
+#ifdef XENO_HEAP_MODULE
+
+#include <linux/mm.h>
+
+static inline void xnarch_init_heapcb (xnarch_heapcb_t *hcb)
+
+{
+    atomic_set(&hcb->numaps,0);
+    hcb->kmflags = 0;
+    hcb->heapbase = NULL;
+    hcb->shmbase = NULL;
+}
+
+static inline int xnarch_remap_page_range(struct vm_area_struct *vma,
+					  unsigned long uvaddr,
+					  unsigned long paddr,
+					  unsigned long size,
+					  pgprot_t prot)
+{
+    return remap_pfn_range(vma,uvaddr,paddr >> PAGE_SHIFT,size,prot);
+}
+
+#endif /* XENO_HEAP_MODULE */
 
 #ifdef XENO_MAIN_MODULE
 
